Fixed wrapping issues in deck listings at minimum page size

--- a/app/static/css.esdynamo/_imports/mobile.less
+++ b/app/static/css.esdynamo/_imports/mobile.less
@@ -102,6 +102,10 @@
 		.mixin-mobile-body-classes();
 	}
 
+	.deck-list .responsive-cols.no-wrap {
+		.mixin-flex-wrap(wrap);
+	}
+
 	.deckbuilder #footer {
 		padding-bottom: 74px;
 	}
